--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "scully": "npx scully --",
-    "scully:serve": "npx scully serve --"
+    "scully:serve": "npx scully serve --",
+    "prepare": "husky install",
+    "commit": "cz"
   },
   "private": true,
   "dependencies": {
@@ -36,9 +38,14 @@
     "@angular-devkit/build-angular": "~13.3.10",
     "@angular/cli": "~13.3.10",
     "@angular/compiler-cli": "~13.3.0",
+    "@commitlint/cli": "^17.4.2",
+    "@commitlint/config-conventional": "^17.4.2",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "commitizen": "^4.3.0",
     "concurrently": "^7.6.0",
+    "cz-conventional-changelog": "^3.3.0",
+    "husky": "^8.0.3",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
@@ -47,5 +54,21 @@
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.6.2",
     "wait-on": "^7.0.1"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ],
+    "rules": {
+      "subject-case": [
+        0
+      ]
+    }
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog",
+      "disableSubjectLowerCase": true
+    }
   }
 }
